@startuml
skinparam componentStyle uml2
skinparam packageStyle rectangle

package "Infraestructura (Adaptadores Externos)" {
    database "MongoDB" as DB <<ShedLock & Data>>
    cloud "SFTP Servers (Mina SSHD)" as SFTP
    [Spring Batch Engine] as BATCH
}

package "Adaptadores" {
    package "Inbound (Primarios)" {
        [BatchReorganizeController] as CTRL
    }
    
    package "Outbound (Secundarios)" {
        [SftpMoveAndIndexItemWriter] as WRITER
        [SftpOriginRepositoryImpl] as SFTP_ORIG_ADAPT
        [SftpDestinationRepositoryImpl] as SFTP_DEST_ADAPT
        [OrganizedFilesIndexRepositoryImpl] as MONGO_REPO_ADAPT
    }
}

package "Capa de Aplicación" {
    interface "StartReorganizeFullUseCase" as UC_IN
    [StartReorganizeFullService] as APP_SERVICE
    
    note right of APP_SERVICE
      Implementa @SchedulerLock
      para evitar ejecuciones concurrentes
    end note

    package "Puertos de Salida (Interfaces)" {
        interface "SftpOriginRepository" as P_ORIG
        interface "SftpDestinationRepository" as P_DEST
        interface "OrganizedFilesIndexRepository" as P_REPO
    }
}

package "Capa de Dominio" {
    [FileReorganizationService] as DOM_SERVICE
    entity "ArchivoLegacy" as ENT_LEGACY
    entity "ProcessedArchivo" as ENT_PROCESSED
}

' Relaciones
CTRL --> UC_IN
APP_SERVICE .up.|> UC_IN
APP_SERVICE --> BATCH : "Dispara Job"
APP_SERVICE -- DB : "Consulta/Crea Lock"

WRITER --> DOM_SERVICE
WRITER --> P_ORIG
WRITER --> P_DEST
WRITER --> P_REPO

SFTP_ORIG_ADAPT .up.|> P_ORIG
SFTP_DEST_ADAPT .up.|> P_DEST
MONGO_REPO_ADAPT .up.|> P_REPO

SFTP_ORIG_ADAPT --> SFTP
SFTP_DEST_ADAPT --> SFTP
MONGO_REPO_ADAPT --> DB

@enduml